(images) Reduce height of next/prev button to avoid them overlapping video controls

--- a/src/app/shared/components/misc/image-viewer/image-viewer.component.scss
+++ b/src/app/shared/components/misc/image-viewer/image-viewer.component.scss
@@ -132,7 +132,7 @@
 
     .next-button,
     .previous-button {
-      height: 100%;
+      height: 50%;
       padding: 1rem;
       z-index: 1030; // Lower than the other buttons because they are tall.
 
